# MobileRoboticsProjekt1

./: README.md  turtlesimAutomata.bash
alt/install/: local_setup.sh  setup.sh
alt/install/turtlesim/share/turtlesim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
alt/install/turtlesim/share/turtlesim/action/: RotateAbsolute.action  RotateAbsolute.idl
alt/install/turtlesim/share/turtlesim/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  turtlesimConfig-version.cmake  turtlesimConfig.cmake
alt/install/turtlesim/share/turtlesim/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
alt/install/turtlesim/share/turtlesim/launch/: multisim.launch.py
alt/install/turtlesim/share/turtlesim/msg/: Color.idl  Color.msg  Pose.idl  Pose.msg
alt/install/turtlesim/share/turtlesim/rust/: Cargo.toml  build.rs
alt/install/turtlesim/share/turtlesim/srv/: Kill.idl  Kill.srv  Kill_Request.msg  Kill_Response.msg  SetPen.idl  (+15 more)
alt/install/turtlesimAutomata/share/turtlesimAutomata/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
alt/log/: latest_build
ros2_ws/src/turtlesimAutomata/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlesimAutomata/turtlesimAutomata/: automata_node.py
(+121 files in other folders)
