<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>turtlesimAutomata</name>
  <version>1.0.0</version>

  <description>
    ROS2 turtlesim automata assignment for the Mobile Robotics course.
  </description>

  <maintainer email="kT5526@mci4me.at">Thomas Kleemayr</maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_ros_py</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>